# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*"]
default-members = ["lib/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Arto Bendiken"]
edition = "2024"
#rust-version = "1.85"
description = "Well-known errors."
#documentation = "https://docs.rs/known-errors/"
readme = true
homepage = "https://github.com/known-facts/known-errors"
repository = "https://github.com/known-facts/known-errors"
license = "Unlicense"
keywords = ["known", "errors", "sysexits"]
categories = [
    "api-bindings",
    "config",
    "data-structures",
    "rust-patterns",
    "no-std",
]
publish = true

[workspace.dependencies]
known-errors = { path = "lib/known-errors" }

[patch.crates-io]
known-errors = { path = "lib/known-errors" }
