[package]
name = "known-errors"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["sysexits"]
std = []
unstable = []

# Features:
sysexits = []

# Integrations:
error-stack = ["dep:error-stack"]
gofer = ["dep:gofer"]
serde = ["dep:serde"]
serde-json = ["serde", "dep:serde_json"]
tokio = ["dep:tokio"]

[dependencies]
error-stack = { version = "0.5", default-features = false, optional = true }
gofer = { version = "0.1", default-features = false, optional = true }
serde = { version = "1", default-features = false, optional = true }
serde_json = { version = "1", default-features = false, features = [
    "alloc",
], optional = true }
tokio = { version = "1", default-features = false, features = [
    "rt",
], optional = true }

[dev-dependencies]
